Instancia firebase, menu, activity, view, more

--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -9,9 +9,6 @@
     android:orientation="vertical"
     tools:context=".Index">
 
-
-
-
     <RadioGroup
         android:id="@+id/grupoRadio"
         android:layout_width="match_parent"
@@ -92,6 +89,16 @@
             android:onClick="colorear"
             android:text="Colorear"/>
     </RadioGroup>
+
+    <Button
+        android:id="@+id/btnFirebase"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:textColor="@color/black"
+        android:onClick="open_activity_firebase"
+        android:text="@string/instancia_firebase"/>
 
     <Button
         android:id="@+id/btnExplorar"
